--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
 <html>
+    <head>
+        <script src="js/angular.min.js"></script>
+        <script src="js/angular-route.js"></script>
+        <script src="js/app.js"></script>
+        <script src="controllers/homeController.js"></script>
+    </head>
+    <body ng-app="erp">
+        <div ng-include="'views/header.html'"></div>
+        <div ui-view></div>
+        <div ng-include="'views/footer.html'"></div>
+    </body>
 </html>
