services,factories,ng options

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <script src="js/angular-route.js"></script>
         <script src="js/app.js"></script>
         <script src="controllers/homeController.js"></script>
+        <script src="controllers/commonController.js"></script>
+        <script src="services/customService.js"></script>
+        <script src="filters/customFilter.js"></script>
     </head>
     <body ng-app="erp">
         <div ng-include="'views/header.html'"></div>
