--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script src="controllers/commonController.js"></script>
         <script src="services/customService.js"></script>
         <script src="filters/customFilter.js"></script>
+        <script src="directives/customDirective.js"></script>
     </head>
     <body ng-app="erp">
         <div ng-include="'views/header.html'"></div>
